fix(books): make usable on mobile

--- a/src/app/books/books.component.scss
+++ b/src/app/books/books.component.scss
@@ -7,25 +7,8 @@ app-filter {
 }
 
 .books {
-
   margin-top: 60px;
   max-width: 700px;
-  @media (max-width: 700px) {
-    font-size: 14px;
-    margin-top: 0;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  @media (min-width: 701px) {
-    margin: 20px auto;
-
-    &.container {
-      font-family: inherit;
-      font-size: inherit;
-      padding-left: initial;
-      padding-right: initial;
-    }
-  }
 
   .no-results {
     font-size: 20px;
@@ -50,6 +33,7 @@ app-filter {
     }
 
     .book-details {
+      padding: 20px;
       width: 65%;
 
       h2 {
@@ -78,6 +62,43 @@ app-filter {
     &.odd {
       background-color: $list-background;
     }
+  }
 
+  @media (max-width: $mobile-break-point) {
+    font-size: 14px;
+    margin-top: 0;
+    padding-left: 0;
+    padding-right: 0;
+
+    .book {
+      flex-wrap: wrap;
+
+      img,
+      .book-details {
+        flex-basis: 100%;
+        margin: auto;
+        width: 100%;
+      }
+
+      img {
+        max-height: 370px;
+        width: auto;
+      }
+
+      .book-details {
+        max-width: 400px;
+      }
+    }
+  }
+
+  @media (min-width: $mobile-break-point + 1px) {
+    margin: 20px auto;
+
+    &.container {
+      font-family: inherit;
+      font-size: inherit;
+      padding-left: initial;
+      padding-right: initial;
+    }
   }
 }
